--- a/index.html
+++ b/index.html
@@ -3,166 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reinis Varavs 🤟</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Glass+Antiqua&family=Lexend:wght@100..900&family=Prata&family=Tulpen+One&family=Zen+Dots&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Glass+Antiqua&family=Lexend:wght@100..900&family=Prata&family=Tulpen+One&family=Zen+Dots&display=swap" rel="stylesheet">
-
+    <title>Reinis Vāravs 🤟</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Glass+Antiqua&family=Lexend:wght@100..900&family=Prata&family=Six+Caps&family=Tulpen+One&family=Zen+Dots&display=swap" rel="stylesheet">
+    <style>
+        body {
+            background-color: #131313;
+            position: fixed;
+            width: 100vw;
+            height: 100vh;
+            overflow: hidden;
+        }
+        div {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        a {
+            color: #f5eee6;
+            text-decoration: none;
+            font-size: 40px;
+            font-family: "Bodoni Moda", serif;
+            position: relative;
+            display: inline-block;
+        }
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dorsa&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/header.css">
-    <link rel="stylesheet" href="./styles/hero.css">
-    <link rel="stylesheet" href="./styles/work.css">
-    <link rel="stylesheet" href="./styles/contacts.css">
-    <link rel="stylesheet" href="./styles/footer.css">
+        a::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: 3px;
+            width: 0;
+            height: 2px;
+            background: #f5eee6;
+            transition: width 0.5s ease;
+        }
+
+        a:hover::after {
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-    <div id="bg-image" class="bg"></div>
-    <div id="cursor"></div>
-    <div id="header-blur"></div>
-    <div id="loading-screen"></div>
-
-    <header>
-        <div id="name">
-            <p>Reinis Vāravs</p>
-            <p id="header-prof">UX/UI Designer, Developer</p>
-        </div>
-        <nav>
-            <ul><li><button class="projects-btn">works,</li>
-                <li><button class="contacts-btn">contact</button></li></ul>
-        </nav>
-    </header>
-
-    <div id="hero">
-        <div id="hero-content">
-            <div id="time">
-                <div>
-                    <p id="clock">00</p>
-                </div>
-                <div id="time-right">
-                    <p id="month">jan</p>
-                    <p>available</p>
-                    <p>for work</p>
-                </div>
-            </div>
-            <div id="creative">
-                <p>creative</p>
-            </div>
-            <div id="designer">
-                <h1 class="heroAnim">DESIGNER</h1>
-                <p class="opacityAnim">&</p>
-            </div>
-            <div id="developer">
-                <h1 class="heroAnim">DEVELOPER</h1>
-            </div>
-            <div id="hero-about">
-                <p>
-                    I am a developer and UX/UI designer based in Latvia. I specialize in JAVASCRIPT and GSAP. I love designs that stand out. I love music, coffee and<span style="opacity: 0; font-size: 7px;">x</span>ai.<span style="opacity: 0;">.........</span>
-                </p>
-            </div>
-        </div>
+    <div>
+        <a href="https://reinisvaravs.com">reinisvaravs.com</a>
     </div>
-
-    <div id="selected-cases-div">
-        <img src="./images/web.png">
-        <h1 id="selected-cases">Selected Cases</h1>
-    </div>
-    <div class="work">
-        <div class="work-item">
-            <div class="work-img-div">
-                <div id="work-viedi" class="work-img" onclick="window.open('https://reinisvaravs.github.io/restaurant/', `_blank`);"></div>
-                <div class="ontop-div" onclick="window.open('https://reinisvaravs.github.io/restaurant/', `_blank`);">
-                    <h1>Restaurant</h1>
-                </div>
-            </div>
-            <div class="work-text-div" onclick="window.open('https://reinisvaravs.github.io/restaurant/', `_blank`);">
-                <h1>Restaurant</h1>
-            </div>            
-        </div>
-        <div class="work-item">
-            <div class="work-img-div">
-                <div id="work-candles" class="work-img" onclick="window.open('https://reinisvaravs.github.io/candles/', `_blank`);"></div>
-                <div class="ontop-div" onclick="window.open('https://reinisvaravs.github.io/candles/', `_blank`);">
-                    <h1>Candle Store</h1>
-                </div>
-            </div>
-            <div class="work-text-div">
-                <h1 onclick="window.open('https://reinisvaravs.github.io/candles/', `_blank`);">Candle Store</h1>
-            </div>
-        </div>
-        <div class="work-item">
-            <div class="work-img-div">
-                <div id="work-karting" class="work-img" onclick="window.open('https://reinisvaravs.github.io/karting/', `_blank`);"></div>
-                <div class="ontop-div" onclick="window.open('https://reinisvaravs.github.io/karting/', `_blank`);">
-                    <h1>Karting Center</h1>
-                </div>
-            </div>
-            <div class="work-text-div">
-                <h1 onclick="window.open('https://reinisvaravs.github.io/karting/', `_blank`);">Karting Center</h1>
-            </div>
-        </div>
-        <div class="work-item">
-            <div class="work-img-div">
-                <div id="work-website1" class="work-img"></div>
-                <div class="ontop-div">
-                    <h1>Website</h1>
-                </div>
-            </div>
-            <div class="work-text-div">
-                <h1>Website</h1>
-            </div>
-        </div>
-        <div class="work-item">
-            <div class="work-img-div">
-                <div id="work-website2" class="work-img"></div>
-                <div class="ontop-div">
-                    <h1>Website</h1>
-                </div>
-            </div>
-            <div class="work-text-div">
-                <h1>Website</h1>
-            </div>
-        </div>
-    </div>
-
-    <section id="contacts-section">
-        <div id="contacts-container">
-            <h4 id="contacts-heading">contact.</h4>
-            <p id="sub-heading">Get in touch with me via social media or send me an email.</p>
-            <div id="email-div">
-                <p class="email" id="email">email: <a href="mailto:rreinisvaravs@gmail.com" target="_blank">rreinisvaravs@gmail.com</a></p>
-                <p class="email" id="phone">phone: <a href="tel:+371 28816633" target="_blank">+371 28816633</a></p>
-                <p class="email" id="instagram">instagram: <a href="https://www.instagram.com/reinisrvaravs/" target="_blank">@reinisrvaravs</a></p>
-            </div>
-        </div>
-    </section>
-
-    <footer>
-        <div id="author-div">
-            <p id="author">2024 Reinis R. Vāravs</p>
-        </div>
-        <div id="footer-buttons">
-            <ul><li><button class="projects-btn">works,</li>
-                <li><button class="contacts-btn">contact</button></li></ul>
-        </div>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
-    <script src="https://unpkg.com/lenis@1.1.5/dist/lenis.min.js"></script>
-    <script src="./scripts/gsap.js"></script>
-    <script src="./scripts/script.js"></script>
 </body>
 </html>
